@@ -1,28 +1,39 @@
 package com.jaworski.sportdiary.service.activity;
 
+import com.jaworski.sportdiary.config.security.UserPrincipal;
 import com.jaworski.sportdiary.domain.Activity;
 import com.jaworski.sportdiary.entity.ActivityEntity;
-import com.jaworski.sportdiary.entity.repository.ActivityEntityRepository;
+import com.jaworski.sportdiary.entity.UserEntity;
 import com.jaworski.sportdiary.mapper.ActivityMapper;
+import com.jaworski.sportdiary.repository.ActivityEntityRepository;
+import com.jaworski.sportdiary.repository.UserEntityRepository;
+import com.jaworski.sportdiary.service.AuthenticationService;
 import lombok.RequiredArgsConstructor;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
-import org.springframework.data.domain.Sort;
+import org.springframework.data.domain.*;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 
 import java.time.LocalDateTime;
 import java.util.*;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
+@Transactional
 public class ActivityService {
 
     private static final Logger LOGGER = LogManager.getLogger(ActivityService.class);
     private final List<Activity> activityList;
     private final ActivityMapper activityMapper;
+    private final UserEntityRepository userEntityRepository;
+    private final AuthenticationService authenticationService;
+
     private final ActivityEntityRepository activityEntityRepository;
 
+    private UserEntity getCurrentUser() {
+        return userEntityRepository.findByFirstName(authenticationService.getCurrentUserName());
+    }
 
     public List<Activity> getActivityList() {
         List<Activity> result = new ArrayList<>();
@@ -33,7 +44,9 @@ public class ActivityService {
 
     public void delete(UUID id) {
         activityEntityRepository.findById(id).ifPresent(activityEntity -> {
-            activityEntityRepository.delete(activityEntity);
+            activityEntity.setDeleted(true);
+            activityEntity.setLastModifiedAt(LocalDateTime.now());
+            activityEntityRepository.save(activityEntity);
             LOGGER.info("Deleted activity with id: " + id);
         });
     }
@@ -43,9 +56,14 @@ public class ActivityService {
         activityEntityRepository.findAll().forEach(activityEntity -> activityList.add(activityMapper.EntityToActivity(activityEntity)));
     }
 
-    public void addActivity(Activity activity) {
+    public Activity addActivity(Activity activity) {
         activity.setAddedAt(LocalDateTime.now());
-        activityEntityRepository.save(activityMapper.ActivityToEntity(activity));
+        activity.setLastModifiedAt(LocalDateTime.now());
+        ActivityEntity entity = new ActivityEntity(activity.getDateTime(), activity.getAddedAt(), activity.getLastModifiedAt(),
+                activity.getDuration(), activity.getDistance().getDistanceOf(), activity.getDistance().getUnits(),
+                activity.getSport(), getCurrentUser());
+        ActivityEntity save = activityEntityRepository.save(entity);
+        return activityMapper.EntityToActivity(save);
     }
 
 
@@ -80,6 +98,51 @@ public class ActivityService {
         return activityEntityRepository.findAll(Sort.by(Sort.Direction.ASC, "dateTime")).stream()
                 .filter(activityEntity -> activityEntity.getDateTime().toLocalDate().isEqual(date.toLocalDate()))
                 .map(activityMapper::EntityToActivity)
-                .collect(Collectors.toList());
+                .toList();
+    }
+
+    public List<Activity> getUserActivityList(UserPrincipal userPrincipal, boolean showIsDeleted) {
+        return activityEntityRepository.findAll(Sort.by(Sort.Direction.ASC, "dateTime")).stream()
+                .filter(activityEntity -> {
+                    if (userPrincipal == null) {
+                        return true;
+                    } else {
+                        return activityEntity.getUserEntity().getId().equals(userPrincipal.getId());
+                    }
+                })
+                .filter(activityEntity -> {
+                    if (showIsDeleted) {
+                        return true;
+                    } else {
+                        return !activityEntity.isDeleted();
+                    }
+                })
+                .map(activityMapper::EntityToActivity)
+                .toList();
+    }
+
+    public void restore(UUID id) {
+        activityEntityRepository.findById(id).ifPresent(activityEntity -> {
+            activityEntity.setDeleted(false);
+            activityEntity.setLastModifiedAt(LocalDateTime.now());
+            activityEntityRepository.save(activityEntity);
+            LOGGER.info("Deleted activity with id: " + id);
+        });
+    }
+
+    public Page<Activity> getPage(Pageable pageable) {
+        int pageSize = pageable.getPageSize();
+        int currentPage = pageable.getPageNumber();
+        int startItem = currentPage * pageSize;
+        List<ActivityEntity> all = activityEntityRepository.findAll(Sort.by("duration").descending());
+        List<Activity> activities = all.stream().map(activityMapper::EntityToActivity).toList();
+        List<Activity> list;
+        if (activities.size() < startItem) {
+            list = Collections.emptyList();
+        } else {
+            int toIndex = Math.min(startItem + pageSize, activities.size());
+            list = activities.subList(startItem, toIndex);
+        }
+        return new PageImpl<>(list, PageRequest.of(currentPage, pageSize), activities.size());
     }
 }
